--- a/test/index.html
+++ b/test/index.html
@@ -88,6 +88,32 @@ test("Resolve inputs - object of numbers", function(){
 
 });
 
+test("Resolve inputs - object of selectors", function(){
+
+	var test_val = 7, a_sel = '#a', r_sel = '#r', i, $i, k, $el;
+
+	$(a_sel).val(test_val);
+	$(r_sel).val(test_val);
+
+	[i, $i] = util.resolve_input({ a: a_sel, r: r_sel });
+
+	equal( 2, $i.size(), 'all selectors in the object should be added to the returned jquery wrapper' );
+
+	for( k in i )
+	{
+		$el = i[k];
+
+		equal( test_val, $el.val(), 'Each selector in the object should be resolved to a jQuery object' );
+
+		ok( $el.is('input[type="text"]'), 'the right element should be found' );
+		ok( $el.hasClass('number'), 'the right element should be found' );
+	}
+
+	ok( i.a.hasClass('in'), 'the right element should be found' );
+	ok( i.r.hasClass('out'), 'the right element should be found' );
+
+});
+
 test("Set all - input fields", function(){
 
 	var str = "test output string", sel = ".in", $el = $(sel);
@@ -155,7 +181,7 @@ test("basic input function", function(){
 });
 
 
-/*module("Named inputs - basic");
+module("Named inputs - basic");
 
 test("One selector one number",function(){
 
@@ -175,7 +201,7 @@ test("One selector one number",function(){
 
 	equal( expected_val, $r.val(), 'the function should be applied to the named arguments' );
 
-});*/
+});
 
 
 module("Options");
