--- a/test/example.html
+++ b/test/example.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Examples - Count Form-u-la jQuery Plugin</title>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-	<script type="text/javascript" src="file:///media/media/Document/devel/formula/src/jquery.form-u-la.js"></script>
+	<script type="text/javascript" src="src/jquery.form-u-la.js"></script>
 </head>
 <body>
 	<h4>Count Form-u-la jQuery Plugin</h4>
