--- a/test/index.html
+++ b/test/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<link rel="stylesheet" href="file:///media/media/Document/devel/formula/lib/qunit/qunit-git.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="../lib/qunit/qunit-git.css" type="text/css" media="screen" />
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-	<script type="text/javascript" src="file:///media/media/Document/devel/formula/lib/qunit/qunit-mod.js"></script>
+	<script type="text/javascript" src="lib/qunit/qunit-mod.js"></script>
 
-	<script type="text/javascript" src="file:///media/media/Document/devel/formula/src/jquery.form-u-la.js"></script>
-	<script type="text/javascript" src="file:///media/media/Document/devel/formula/test/tests.js"></script>
+	<script type="text/javascript" src="src/jquery.form-u-la.js"></script>
+	<script type="text/javascript" src="test/tests.js"></script>
 </head>
 <body>
   <h1 id="qunit-header">Count Form-u-la Plugin Tests</h1>
