--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<link rel="stylesheet" href="../lib/qunit/qunit-git.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="lib/qunit/qunit-git.css" type="text/css" media="screen" />
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 	<script type="text/javascript" src="lib/qunit/qunit-mod.js"></script>
