--- a/example.html
+++ b/example.html
@@ -7,7 +7,134 @@
 </head>
 <body>
 	<h4>Count Form-u-la jQuery Plugin</h4>
-	<h1>Example Code</h1>
+
+	<ol>
+		<li><a href="#usage">Usage</a></li>
+		<li><a href="#examples">Examples</a></li>
+	</ol>
+
+	<h1><a name="usage">Usage</a></h1>
+
+	<code>
+		$someFormField.live_formula( inputs, [function], [options] );
+	</code>
+	<h3>Output</h3>
+	<p>
+		The object the function is called on receives the output of the function on the inputs as a call to val().  (TODO: Add support for text()).
+	</p>
+	<h3>Inputs</h3>
+	<p>
+		Inputs can be passed in a variety of ways:
+	</p>
+	<ul>
+		<li>jQuery selector, e.g. <code>$o.live_formula('.subtotals');</code></li>
+		<li>jQuery object, e.g. <code>$o.live_formula( $subtotals );</code></li>
+		<li>JavaScript literal, e.g. <code>$o.live_formula( 5 );</code></li>
+		<li>Object with named parameters, each of which can be any of the above.
+			<code><pre>
+$o.live_formula({
+	subtotal: '#subtotal',
+	tax:	  '#tax',
+	surcharge: 5
+}, util.sum);
+</pre>			</code>
+		</li>
+	</ul>
+	<h3>Function</h3>
+	<p>
+		The second parameter is the function to perform on the inputs.  This must be a unary function.  If there is only a single parameter to the function (after re-resolving all selectors at compute-time), this function is populated with that value.
+	</p>
+	<p>
+		In any other case, the input will be an object with named parameters according to the following rules:
+	</p>
+	<ul>
+		<li>If the inputs were passed in as an object, they will be passed to the function as an object, with the value of each input placed at it's named index.</li>
+		<li>jQuery selectors that resolve to a single input are passed as a single value to the function.</li>
+		<li>jQuery selectors that resolve to multiple inputs are passed as an object of values with numeric keys.</li>
+	</ul>
+	<p>
+		Before invoking the function, Count Form-u-la will set a property called unary so that the function can determine what to do with the input.  For example, the following code transfers the value of the first form field with the 'line_items' class to jQuery object $o, irrespective of whether there is only on or more than one on the page.  Note that the function need not handle the nullary case; this is a user-oriented plugin, so the values are only recalculated when an input changes.
+	</p>
+	<code><pre>
+function findValue(inputs){
+	if( findValue.unary ){
+		return inputs;
+	}
+	else {
+		return inputs[0];
+	}
+}
+
+$o.live_formula('.line_items', findValue);
+</pre>	</code>
+
+	<p>
+		As seen in the above example, the function must simply return the value, and Count Form-u-la takes care of the rest.  Because everything is by value in the function, specifying complex equations becomes very simple.
+	</p>
+	<code><pre>
+function quadratic(i){
+	return (-i.b + Math.sqrt( i.b * i.b - 4 * i.a * i.c ))/(2 * i.a)
+}
+$x.live_formula({
+	a: '#x_2_coefficient',
+	b: '#x_coefficient',
+	c: '#constant'
+},quadratic);
+</pre>	</code>
+
+	<p>Presumably the HTML to support this would be something along the lines of</p>
+	<code><pre>
+&lt;form&gt;
+	&lt;input type="text" id="x_2_coefficient" /&gt; * x &lt;sup&gt; 2 &lt;/sup&gt; +
+	&lt;input type="text" id="x_coefficient" /&gt; * x +
+	&lt;input type="text" id="constant" /&gt;
+&lt;/form&gt;
+</pre>	</code>
+
+	<h3>Options</h3>
+
+	<h4>Bind</h4>
+
+	<code>
+$o.live_formula('.inputs', someFunction, { bind: 'keyup' }); // For a REALLY live form
+	</code>
+
+	<p>
+		Choose which event on the input fields to bind recalculation of the output field to.  The default is 'blur', and in my opinion that's the only one you'll ever need.
+	</p>
+
+	<h4>Taintable</h4>
+
+	<code>
+$o.live_formul('.inputs', someFunction, { taintable: true });
+	</code>
+
+	<p>
+		By default, Count Form-u-la disables output fields to discourage the user from mucking about in them.  However, sometimes there are good reasons to allow a user to edit a field that otherwise is auto-calculated.  For those situations, there is taintable.
+	</p>
+	<p>
+		At the moment, the only way to untaint the field is by literally removing the entry in the jQuery data store.  Feel free to use that technique.  (TODO: Expose some way to untaint a field.)
+	</p>
+
+	<h4>Precision</h4>
+
+	<code>
+$o.live_formula('.inputs', someFunction, { precision: 'lowest' }); // standard scientific usage
+	</code>
+
+	<p>Strategy for precision correction.  Defaults to the scientific definition of the term.  (TODO: Expose decimal places style of calculating precision, since that's what everybody thinks of.)  Choices:</p>
+	<dl>
+		<dt><code>ignore</code></dt>
+		<dd>Perform no precision handling.  Default.</dd>
+		<dt><code>highest</code></dt>
+		<dd>Round to the most digits seen among inputs.</dd>
+		<dt><code>lowest</code></dt>
+		<dd>Round to the least digits seen among inputs.</dd>
+		<dt><code>function(a,b);</code></dt>
+		<dd>A custom precision function.  Given the precision of two inputs, returns the precision of the output.  Useful for hacking a fixed precision, e.g. <code>function(a,b){ return 3; }</code>, which would probably be more useful with decimal places.</dd>
+	</dl>
+
+	<h1><a name="examples">Examples</a></h1>
 
 	<h3>Basic sum</h3>
 	<form>
