initial convert.  still lots of errors

--- a/example.html
+++ b/example.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Examples - Count Form-u-la jQuery Plugin</title>
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.8.16/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="src/jquery.form-u-la.js"></script>
 </head>
 <body>
