--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="lib/qunit/qunit-git.css" type="text/css" media="screen" />
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.8.16/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="lib/qunit/qunit-mod.js"></script>
 
 	<script type="text/javascript" src="src/jquery.form-u-la.js"></script>
